--- a/template/core-dist/src/app/navigation/layouts/default/default.layout.component.scss
+++ b/template/core-dist/src/app/navigation/layouts/default/default.layout.component.scss
@@ -6,3 +6,10 @@
 .container--hover {
   margin-left: 64px;
 }
+
+.progress-bar {
+  position: absolute;
+  top:64px;
+  width: 100%;
+  z-index: 1;
+}
