--- a/template/core-dist/src/app/pages/customers-page/customer/customer.component.html
+++ b/template/core-dist/src/app/pages/customers-page/customer/customer.component.html
@@ -1,45 +1,47 @@
-<div class="entity" [class.entity--full-screen]="fullScreen">
-  <entity-view-topnav [service]="service" (close)="closeDetails()"></entity-view-topnav>
+<div #entityContainer class="entity" [class.entity--full-screen]="fullScreen">
+  <div *ngIf="!loading" class="entity__body" [style.height]="height">
+    <entity-view-topnav [service]="service" (close)="closeDetails()"></entity-view-topnav>
 
-  <div *ngIf="entity">
-    <div class="entity__caption">
-      {{entity.name}}
-    </div>
+    <div *ngIf="entity">
+      <div class="entity__caption">
+        {{entity.name}}
+      </div>
 
-    <div class="entity__content">
-      <md-tab-group>
-        <md-tab label="Details">
+      <div class="entity__content">
+        <md-tab-group>
+          <md-tab label="Details">
 
-          <entity-view-info
-            [title]="'GENERAL DETAILS'"
-            [data]="[
-              {name:'ID', value: entity.id},
-              {name:'Email', value: entity.email},
-              {name:'First Name', value: entity.firstName},
-              {name:'Last Name', value: entity.lastName},
-              {name:'Phone', value: entity.phone},
-              {name:'State', value: entity.address.state},
-              {name:'City', value: entity.address.city}
-            ]">
-          </entity-view-info>
+            <entity-view-info
+              [title]="'GENERAL DETAILS'"
+              [data]="[
+                {name:'ID', value: entity.id},
+                {name:'Email', value: entity.email},
+                {name:'First Name', value: entity.firstName},
+                {name:'Last Name', value: entity.lastName},
+                {name:'Phone', value: entity.phone},
+                {name:'State', value: entity.address.state},
+                {name:'City', value: entity.address.city}
+              ]">
+            </entity-view-info>
 
-          <entity-view-info
-            [title]="'ADDRESS DETAILS'"
-            [data]="[
-              {name:'Country', value: entity.address.country},
-              {name:'State', value: entity.address.state},
-              {name:'City', value: entity.address.city},
-              {name:'Line 1', value: entity.address.line1},
-              {name:'Line 2', value: entity.address.line2},
-              {name:'Zip', value: entity.address.zip}
-            ]">
-          </entity-view-info>
+            <entity-view-info
+              [title]="'ADDRESS DETAILS'"
+              [data]="[
+                {name:'Country', value: entity.address.country},
+                {name:'State', value: entity.address.state},
+                {name:'City', value: entity.address.city},
+                {name:'Line 1', value: entity.address.line1},
+                {name:'Line 2', value: entity.address.line2},
+                {name:'Zip', value: entity.address.zip}
+              ]">
+            </entity-view-info>
 
-        </md-tab>
-        <md-tab label="Edit">
+          </md-tab>
+          <md-tab label="Edit">
 
-        </md-tab>
-      </md-tab-group>
+          </md-tab>
+        </md-tab-group>
+      </div>
     </div>
   </div>
 </div>
