--- a/template/core-dist/src/app/pages/load-balancers-page/load-balancer/load-balancer.component.html
+++ b/template/core-dist/src/app/pages/load-balancers-page/load-balancer/load-balancer.component.html
@@ -1,29 +1,30 @@
+<div #entityContainer class="entity" [class.entity--full-screen]="fullScreen">
+  <div *ngIf="!loading" class="entity__body" [style.height]="height">
 
-<div class="entity" [class.entity--full-screen]="fullScreen">
+    <entity-view-topnav [service]="service" (close)="closeDetails()"></entity-view-topnav>
 
-  <entity-view-topnav [service]="service" (close)="closeDetails()"></entity-view-topnav>
+    <div *ngIf="entity">
+      <div class="entity__caption">
+        {{entity.name}}
+      </div>
 
-  <div *ngIf="entity">
-    <div class="entity__caption">
-      {{entity.name}}
-    </div>
+      <div class="entity__content">
+        <md-tab-group>
+          <md-tab label="Details">
 
-    <div class="entity__content">
-      <md-tab-group>
-        <md-tab label="Details">
+            <entity-view-info
+              [title]="'GENERAL DETAILS'"
+              [data]="[
+                {name:'ID', value: entity.id}
+              ]">
+            </entity-view-info>
 
-          <entity-view-info
-            [title]="'GENERAL DETAILS'"
-            [data]="[
-              {name:'ID', value: entity.id}
-            ]">
-          </entity-view-info>
+          </md-tab>
+          <md-tab label="Edit">
 
-        </md-tab>
-        <md-tab label="Edit">
-
-        </md-tab>
-      </md-tab-group>
+          </md-tab>
+        </md-tab-group>
+      </div>
     </div>
   </div>
 </div>
