--- a/template/core-dist/src/app/pages/transactions-page/transaction/transaction.component.html
+++ b/template/core-dist/src/app/pages/transactions-page/transaction/transaction.component.html
@@ -1,30 +1,32 @@
-<div class="entity" [class.entity--full-screen]="fullScreen">
-  <entity-view-topnav [service]="service" (close)="closeDetails()"></entity-view-topnav>
+<div #entityContainer class="entity" [class.entity--full-screen]="fullScreen">
+  <div *ngIf="!loading" class="entity__body" [style.height]="height">
+    <entity-view-topnav [service]="service" (close)="closeDetails()"></entity-view-topnav>
 
-  <div *ngIf="entity">
-    <div class="entity__caption">
-      {{entity.name}}
-    </div>
+    <div *ngIf="entity">
+      <div class="entity__caption">
+        {{entity.name}}
+      </div>
 
-    <div class="entity__content">
-      <md-tab-group>
-        <md-tab label="Details">
+      <div class="entity__content">
+        <md-tab-group>
+          <md-tab label="Details">
 
-          <entity-view-info
-            [title]="'GENERAL DETAILS'"
-            [data]="[
-              {name:'ID', value: entity.id},
-              {name:'Date', value: entity.date},
-              {name:'Amount', value: entity.amount},
-              {name:'Processor Response', value: entity.processorResponse.message}
-            ]">
-          </entity-view-info>
+            <entity-view-info
+              [title]="'GENERAL DETAILS'"
+              [data]="[
+                {name:'ID', value: entity.id},
+                {name:'Date', value: entity.date},
+                {name:'Amount', value: entity.amount},
+                {name:'Processor Response', value: entity.processorResponse.message}
+              ]">
+            </entity-view-info>
 
-        </md-tab>
-        <md-tab label="Edit">
+          </md-tab>
+          <md-tab label="Edit">
 
-        </md-tab>
-      </md-tab-group>
+          </md-tab>
+        </md-tab-group>
+      </div>
     </div>
   </div>
 </div>
