--- a/template/core-dist/src/assets/scss/_entity-view.scss
+++ b/template/core-dist/src/assets/scss/_entity-view.scss
@@ -55,26 +55,25 @@
 
 .entity {
   position:absolute;
+  top: -64px;
   right: 0;
   min-height: 100%;
   width: 30%;
   min-width: 380px;
-  background: white;
-  box-shadow: -1px -1px 2px rgba(0, 0, 0, 0.15);
-  z-index: 1;
+  z-index: 2;
   overflow: auto;
 
   &--full-screen {
     min-height: 100vh;
   }
 
-  &--wrapper {
+  &__body {
     position: absolute;
+    top: 65px;
     right: 0;
-    height: 100%;
-    width: 30%;
-    min-width: 380px;
-    overflow: hidden;
+    width: 99%;
+    background: white;
+    box-shadow: -1px -1px 2px rgba(0, 0, 0, 0.15);
   }
 
   &__nav {
