--- a/template/core-dist/src/styles.scss
+++ b/template/core-dist/src/styles.scss
@@ -12,6 +12,7 @@
 @import "assets/scss/_mixins.scss";
 @import "assets/scss/_tab.scss";
 @import "assets/scss/_menu.scss";
+@import "assets/scss/_dashboard.scss";
 
 /***************
   HTML Styles
