--- a/template/core-dist/src/app/pages/fulfillment-providers/fulfillment-provider/fulfillment-provider.component.html
+++ b/template/core-dist/src/app/pages/fulfillment-providers/fulfillment-provider/fulfillment-provider.component.html
@@ -1,6 +1,6 @@
 <div #entityContainer class="entity" [class.entity--full-screen]="fullScreen">
   <div *ngIf="!loading" class="entity__body" [style.height]="height">
-    <entity-view-topnav [service]="service" (close)="closeDetails()"></entity-view-topnav>
+    <entity-view-topnav [service]="service" (close)="closeDetails()" (del)="emitDeleteEntity()"></entity-view-topnav>
 
     <div *ngIf="entity">
       <div class="entity__caption">
