--- a/template/core-dist/src/app/pages/load-balancers-page/load-balancers.component.html
+++ b/template/core-dist/src/app/pages/load-balancers-page/load-balancers.component.html
@@ -1,5 +1,5 @@
 <div #indexR class="entity-index">
-  <load-balancer *ngIf="showEntityDetails" [entityId]="showEntityId" [fullScreen]="fullScreen" (close)="hideEntityDetails()"></load-balancer>
+  <load-balancer *ngIf="showEntityDetails" [entityId]="showEntityId" [fullScreen]="fullScreen" (close)="hideEntityDetails()" (deleteEntity)="deleteEntity($event)"></load-balancer>
 
   <div class="entity-index__title">Load Balancers</div>
 
