--- a/template/core-dist/src/app/pages/users-page/users.component.html
+++ b/template/core-dist/src/app/pages/users-page/users.component.html
@@ -1,5 +1,5 @@
 <div #indexR class="entity-index">
-  <user *ngIf="showEntityDetails" [entityId]="showEntityId" [fullScreen]="fullScreen" (close)="hideEntityDetails()"></user>
+  <user *ngIf="showEntityDetails" [entityId]="showEntityId" [fullScreen]="fullScreen" (close)="hideEntityDetails()" (deleteEntity)="deleteEntity($event)"></user>
   <div class="entity-index__title">Users</div>
 
   <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="addEntity()"><md-icon>add</md-icon></button>
