--- a/template/core-dist/src/app/pages/fulfillment-providers/fulfillment-provider/fulfillment-provider.component.html
+++ b/template/core-dist/src/app/pages/fulfillment-providers/fulfillment-provider/fulfillment-provider.component.html
@@ -8,7 +8,7 @@
       </div>
 
       <div *ngIf="mode === 'view'" class="entity__content">
-        <md-tab-group  [(selectedIndex)]="tabIndex">
+        <md-tab-group [(selectedIndex)]="tabIndex">
           <md-tab label="Details">
 
             <entity-view-info
@@ -33,7 +33,7 @@
                 <md-input [(ngModel)]="entityCopy.password" placeholder="Password"></md-input>
                 <md-input [(ngModel)]="entityCopy.endpoint" placeholder="Endpoint"></md-input>
               </div>
-              <div class="entity__edit__buttons">
+              <div class="entity__buttons">
                 <button md-raised-button (click)="update()">Update</button>
                 <button md-raised-button (click)="cancelUpdate()">Cancel</button>
               </div>
@@ -42,17 +42,15 @@
         </md-tab-group>
       </div>
       <div *ngIf="mode === 'add'" class="entity__add">
-        <div class="entity__edit">
-          <div class="entity__edit__content">
-            <md-input [(ngModel)]="entity.name" placeholder="Name"></md-input>
-            <md-input [(ngModel)]="entity.provider" placeholder="Provider"></md-input>
-            <md-input [(ngModel)]="entity.username" placeholder="Username"></md-input>
-            <md-input [(ngModel)]="entity.password" placeholder="Password"></md-input>
-            <md-input [(ngModel)]="entity.endpoint" placeholder="Endpoint"></md-input>
-          </div>
-          <div class="entity__edit__buttons">
-            <button md-raised-button (click)="create()">Save</button>
-          </div>
+        <div class="entity__add__content">
+          <md-input [(ngModel)]="entity.name" placeholder="Name"></md-input>
+          <md-input [(ngModel)]="entity.provider" placeholder="Provider"></md-input>
+          <md-input [(ngModel)]="entity.username" placeholder="Username"></md-input>
+          <md-input [(ngModel)]="entity.password" placeholder="Password"></md-input>
+          <md-input [(ngModel)]="entity.endpoint" placeholder="Endpoint"></md-input>
+        </div>
+        <div class="entity__buttons">
+          <button md-raised-button (click)="create()">Save</button>
         </div>
       </div>
     </div>
